care/force-app/main/default/objects/Override_Process_Settings__c/Override_Process_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This specifies override settings for different processes like Retention</description>
    <label>Override Process Settings</label>
</CustomObject>