care/force-app/main/default/objects/Override_Process_Settings__c/fields/Intl_Retention_Daily_Email_Counter__c.field-meta.xml
<CustomField>
    <fullName>Intl_Retention_Daily_Email_Counter__c</fullName>
    <description>Specifies the counter for retention error email notifications and sends until it reaches threshold limits configured.</description>
    <label>Intl Retention Daily Email Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>