care/force-app/main/default/objects/Override_Process_Settings__c/fields/Intl_Retention_Daily_Email_Limit__c.field-meta.xml
<CustomField>
    <fullName>Intl_Retention_Daily_Email_Limit__c</fullName>
    <description>Specifies the threshold limits for retention error email notification to admins</description>
    <label>Intl Retention Daily Email Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>