care/force-app/main/default/objects/Override_Process_Settings__c/fields/Override_Retention_Last_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Retention_Last_Action_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Retention Last Action Date</label>
    <type>Checkbox</type>
</CustomField>